removed java debug from the master branch